--- a/src/components/cart-item/cart-item.styles.scss
+++ b/src/components/cart-item/cart-item.styles.scss
@@ -20,4 +20,10 @@
       font-size: 16px;
     }
   }
+
+  .item-delete{
+    cursor: pointer;
+    align-items: center;
+    display: flex;
+  }
 }
