--- a/client/src/components/collection-item/collection-item.styles.scss
+++ b/client/src/components/collection-item/collection-item.styles.scss
@@ -47,3 +47,24 @@
     }
   }
 }
+
+@media (max-width: 800px) {
+  .collection-item{
+    width: 40vw;
+    &:hover{
+      .image{
+        opacity: unset !important;
+      }
+      .custom-button{
+        opacity: unset !important; 
+        display: unset !important;
+      }
+    }
+    .custom-button{
+      display: block;
+      opacity: 0.9; 
+      padding: 0 10px 0 10px;
+    }
+  }
+  
+}
