--- a/client/src/components/collection-preview/collection-preview.styles.scss
+++ b/client/src/components/collection-preview/collection-preview.styles.scss
@@ -13,3 +13,14 @@
     justify-content: space-between;
   }
 }
+
+@media (max-width: 800px) {
+  .collection-preview {
+    align-items: center;
+  }
+  .preview{
+    display: grid !important;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 15px;
+  }
+}
