--- a/client/src/components/menu-item/menu-item.styles.scss
+++ b/client/src/components/menu-item/menu-item.styles.scss
@@ -11,35 +11,37 @@
   background-size: cover;
   overflow: hidden;
 
-  &:hover{ 
+  &:hover {
     cursor: pointer;
 
-    & .backgound-image{
+    & .backgound-image {
       transform: scale(1.1);
       transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95)
     }
 
-    & .content{
+    & .content {
       opacity: 0.9;
     }
   }
-  
-  &.large{
+
+  &.large {
     height: 380px;
   }
+
   &:first-child {
     margin-right: 7.5px;
   }
 
   &:last-child {
     margin-left: 7.5px;
-  }
-  .backgound-image{
+  } 
+
+  .backgound-image {
     width: 100%;
     height: 100%;
     background-position: center;
     background-size: cover;
- 
+
   }
 
   .content {
@@ -65,5 +67,12 @@
       font-weight: lighter;
       font-size: 16px;
     }
+  }
+}
+
+@media (max-width: 800px) {
+  .menu-item{ 
+    height: 200px !important;
+
   }
 }
