--- a/client/src/components/collection-item/collection-item.styles.scss
+++ b/client/src/components/collection-item/collection-item.styles.scss
@@ -13,6 +13,10 @@
       opacity: 0.85;
       display: flex;
     }
+
+    .favorite-button{ 
+      display: flex;
+    }
   }
   .image {
     width: 100%;
@@ -21,6 +25,7 @@
     background-position: center;
     margin-bottom: 5px;
   }
+  
 
   .custom-button{
     width: 80%;
@@ -46,7 +51,9 @@
       width: 10%;
     }
   }
+ 
 }
+
 
 @media (max-width: 800px) {
   .collection-item{
